--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+body {
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-style: normal;
+  font-size: 1.9rem;
+  line-height: 2.2rem;
+
+  color: rgb(31, 30, 29);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.app-wrapper {
+  width: 100%;
+  max-width: 1920px;
+  min-width: 800px;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 0 auto;
+  padding: 0.7rem;
+  margin: 0 auto;
+  
+  display: grid;
+  grid-template-areas:
+    "h h"
+    "n c";
+  grid-template-rows: 10rem 1fr;
+  grid-template-columns: 2fr 10fr;
+  grid-gap: 0.7rem;
 }
 
-.App-link {
-  color: #61dafb;
+.app-wrapper-content {
+  background-color: rgb(250, 250, 250);
+  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.5);
+  grid-area: c;
+  border-radius: 2rem;
+  padding: 2rem;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  cursor: pointer
 }
